# usb-serial

./: README.md  usb-serial.code-workspace
doc/: README.md  Untitled.sketch  firmware.md  serial-signals.md  usb-facts.md
doc/images/: Architecture Drawings.sketch
firmware/: README.md  platformio.ini
firmware/include/: common.h  hardware.h  uart.h  usb_cdc.h  usb_conf.h  usb_dev.h  usb_serial.h
firmware/lib/qsb/: qsb_bos.c  qsb_bos.h  qsb_cdc.h  qsb_config.h  qsb_control.c  qsb_device.c  qsb_device.h  qsb_drv_fsdev.c  qsb_drv_fsdev_btable.h  qsb_drv_fsdev_btable_2.c  qsb_drv_fsdev_btable_4.c  qsb_drv_fsdev_plus.c  qsb_fsdev.h  qsb_fsdev_ep.h  qsb_private.h  qsb_serial_no.c  qsb_standard.c  qsb_std_data.h  qsb_windows.c  qsb_windows.h
firmware/lib/qusb/: qusb_cdc.h  qusb_config.h  qusb_control.c  qusb_device.c  qusb_device.h  qusb_drv_fsdev.c  qusb_drv_fsdev_btable.h  qusb_drv_fsdev_btable_2.c  qusb_drv_fsdev_btable_4.c  qusb_drv_fsdev_plus.c  qusb_fsdev.h  qusb_fsdev_ep.h  qusb_private.h  qusb_standard.c  qusb_std_data.h
firmware/src/: common.cpp  main.cpp  uart.cpp  usb_cdc.cpp  usb_conf.cpp  usb_dev.cpp  usb_serial.cpp
hardware/: README.md
support/: genericSTM32F042F6.json  nucleo_f042k6_ex.json  stm32f042f6_stlink.cfg
test-macos/loopback-test/: main.cpp
test-macos/loopback-test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
test/Loopback-Windows/: .gitignore  Loopback-Test.sln
test/loopback-linux/: .gitignore  CMakeLists.txt  main.cpp  prng.h  serial.cpp  serial.hpp
throttler/: README.md  platformio.ini
throttler/src/: main.cpp
(+14 files in other folders)
